Initial setup with JDK16 & JDK17