@@ -1,2 +1,4 @@
 # java-projects
 Test various versions of java for testing purpose of SonarSource projects
+
+Note that only the latest version of Java can use preview features, and the flag "--enable-preview".
